<resources>
    <string name="app_name">VA Shopify</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account_login">Do you have an account? Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email.</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="chair">Chair</string>
    <string name="beauty_products">Beauty Products</string>
    <string name="personal_care_products">Personal Care Products</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="facebook1">Facebook</string>
    <string name="google1">Google</string>
    <string name="todo1">TODO</string>
    <string name="forgot_password1">Forgot password?</string>
    <string name="brandname">BrandName</string>
    <string name="m_r_p">M.R.P:</string>
    <string name="_1600">₹1600</string>
    <string name="see_all">See All</string>
    <string name="category">Category</string>
    <string name="see_all1">See All</string>
    <string name="notifications">Notifications</string>
    <string name="va_shopify">VA Shopify</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="addresses">Addresses</string>
    <string name="please_check_network_connection_n_try_again">Please Check Network Connection!! \n Try Again!!</string>
    <string name="categories">Categories</string>
</resources>