<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            android:gravity="center"

            android:text="@string/let_s_login"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edEmailLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="36dp"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsLogin"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:textSize="@dimen/h1TextSize"

            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailLogin"
            style="@style/editText"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h1"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/edPasswordLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/forgot_password1"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            tools:ignore="ContentDescription,ImageContrastCheck"
            android:contentDescription="@string/todo1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook1"
            android:textColor="@color/g_gray700"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google1"
            android:textColor="@color/g_gray700"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin"
            tools:ignore="TextSizeCheck" />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:gravity="center"
            app:spinning_bar_color="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            style="@style/h0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>