<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/edPasswordRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edEmailRegister"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edEmailRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edMobileRegister"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tvLetsRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:gravity="center"
            android:text="@string/let_s_register"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.561"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDoYouHaveAccount"
            style="@style/h0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="@string/do_you_have_an_account_login"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />

        <EditText
            android:id="@+id/edFirstNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsRegister" />

        <EditText
            android:id="@+id/edLastNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister"
          />

        <EditText
            android:id="@+id/edMobileRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="12dp"
            android:hint="@string/whatsapp_number"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/g_gray700"
            android:textColor="@color/black"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edLastNameRegister"
             />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edPasswordRegister"
            app:spinning_bar_color="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <ImageView
            android:id="@+id/facebookRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="@color/g_gray700"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintBottom_toBottomOf="@id/facebookRegister"
            app:layout_constraintEnd_toEndOf="@id/facebookRegister"
            app:layout_constraintStart_toStartOf="@id/facebookRegister"
            app:layout_constraintTop_toTopOf="@id/facebookRegister" />


        <ImageView
            android:id="@+id/googleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textColor="@color/g_gray700"
            android:textSize="@dimen/h1TextSize"
            app:layout_constraintBottom_toBottomOf="@id/googleRegister"
            app:layout_constraintEnd_toEndOf="@id/googleRegister"
            app:layout_constraintStart_toStartOf="@id/googleRegister"
            app:layout_constraintTop_toTopOf="@id/googleRegister" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>