<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="10dp"
    app:cardElevation="10dp"
    android:elevation="5dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="7dp"
    >

    <LinearLayout
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageProductRvItem"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="6dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/ic_all_orders"

            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/linear_product_name"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:fontFamily="@font/sf_pro_display"
                android:minLines="1"
                android:text="@string/chair"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMrp"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            tools:ignore="TextSizeCheck">


            <TextView
                android:id="@+id/tv_valueRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="₹1600"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                  android:layout_marginStart="10dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_Mrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/m_r_p"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_valueMrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/_1600"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="SmallSp"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="183dp" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>

